tests/fixtures/negative/004_invalid_token.js
// Expected error: invalid token @
const x = @;
